@@ -66,6 +66,19 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|Field
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|MapFieldSelector
 import|;
 end_import
@@ -427,11 +440,11 @@ argument_list|(
 name|maxNumFragments
 argument_list|)
 decl_stmt|;
-name|String
+name|Field
 index|[]
 name|values
 init|=
-name|getFieldValues
+name|getFields
 argument_list|(
 name|reader
 argument_list|,
@@ -531,6 +544,8 @@ index|]
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Deprecated
 DECL|method|getFieldValues
 specifier|protected
 name|String
@@ -580,6 +595,58 @@ argument_list|)
 return|;
 comment|// according to Document class javadoc, this never returns null
 block|}
+DECL|method|getFields
+specifier|protected
+name|Field
+index|[]
+name|getFields
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|,
+name|int
+name|docId
+parameter_list|,
+name|String
+name|fieldName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// according to javadoc, doc.getFields(fieldName) cannot be used with lazy loaded field???
+name|Document
+name|doc
+init|=
+name|reader
+operator|.
+name|document
+argument_list|(
+name|docId
+argument_list|,
+operator|new
+name|MapFieldSelector
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|fieldName
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+return|return
+name|doc
+operator|.
+name|getFields
+argument_list|(
+name|fieldName
+argument_list|)
+return|;
+comment|// according to Document class javadoc, this never returns null
+block|}
+annotation|@
+name|Deprecated
 DECL|method|makeFragment
 specifier|protected
 name|String
@@ -600,13 +667,6 @@ name|WeightedFragInfo
 name|fragInfo
 parameter_list|)
 block|{
-name|StringBuilder
-name|fragment
-init|=
-operator|new
-name|StringBuilder
-argument_list|()
-decl_stmt|;
 specifier|final
 name|int
 name|s
@@ -615,9 +675,11 @@ name|fragInfo
 operator|.
 name|startOffset
 decl_stmt|;
-name|String
-name|src
-init|=
+return|return
+name|makeFragment
+argument_list|(
+name|fragInfo
+argument_list|,
 name|getFragmentSource
 argument_list|(
 name|buffer
@@ -632,6 +694,84 @@ name|fragInfo
 operator|.
 name|endOffset
 argument_list|)
+argument_list|,
+name|s
+argument_list|)
+return|;
+block|}
+DECL|method|makeFragment
+specifier|protected
+name|String
+name|makeFragment
+parameter_list|(
+name|StringBuilder
+name|buffer
+parameter_list|,
+name|int
+index|[]
+name|index
+parameter_list|,
+name|Field
+index|[]
+name|values
+parameter_list|,
+name|WeightedFragInfo
+name|fragInfo
+parameter_list|)
+block|{
+specifier|final
+name|int
+name|s
+init|=
+name|fragInfo
+operator|.
+name|startOffset
+decl_stmt|;
+return|return
+name|makeFragment
+argument_list|(
+name|fragInfo
+argument_list|,
+name|getFragmentSource
+argument_list|(
+name|buffer
+argument_list|,
+name|index
+argument_list|,
+name|values
+argument_list|,
+name|s
+argument_list|,
+name|fragInfo
+operator|.
+name|endOffset
+argument_list|)
+argument_list|,
+name|s
+argument_list|)
+return|;
+block|}
+DECL|method|makeFragment
+specifier|private
+name|String
+name|makeFragment
+parameter_list|(
+name|WeightedFragInfo
+name|fragInfo
+parameter_list|,
+name|String
+name|src
+parameter_list|,
+name|int
+name|s
+parameter_list|)
+block|{
+name|StringBuilder
+name|fragment
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
 decl_stmt|;
 name|int
 name|srcIndex
@@ -745,6 +885,8 @@ name|toString
 argument_list|()
 return|;
 block|}
+annotation|@
+name|Deprecated
 DECL|method|getFragmentSource
 specifier|protected
 name|String
@@ -828,6 +970,137 @@ literal|0
 index|]
 operator|++
 index|]
+argument_list|)
+expr_stmt|;
+block|}
+name|int
+name|eo
+init|=
+name|buffer
+operator|.
+name|length
+argument_list|()
+operator|<
+name|endOffset
+condition|?
+name|buffer
+operator|.
+name|length
+argument_list|()
+else|:
+name|endOffset
+decl_stmt|;
+return|return
+name|buffer
+operator|.
+name|substring
+argument_list|(
+name|startOffset
+argument_list|,
+name|eo
+argument_list|)
+return|;
+block|}
+DECL|method|getFragmentSource
+specifier|protected
+name|String
+name|getFragmentSource
+parameter_list|(
+name|StringBuilder
+name|buffer
+parameter_list|,
+name|int
+index|[]
+name|index
+parameter_list|,
+name|Field
+index|[]
+name|values
+parameter_list|,
+name|int
+name|startOffset
+parameter_list|,
+name|int
+name|endOffset
+parameter_list|)
+block|{
+while|while
+condition|(
+name|buffer
+operator|.
+name|length
+argument_list|()
+operator|<
+name|endOffset
+operator|&&
+name|index
+index|[
+literal|0
+index|]
+operator|<
+name|values
+operator|.
+name|length
+condition|)
+block|{
+if|if
+condition|(
+name|index
+index|[
+literal|0
+index|]
+operator|>
+literal|0
+operator|&&
+name|values
+index|[
+name|index
+index|[
+literal|0
+index|]
+index|]
+operator|.
+name|isTokenized
+argument_list|()
+operator|&&
+name|values
+index|[
+name|index
+index|[
+literal|0
+index|]
+index|]
+operator|.
+name|stringValue
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+condition|)
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|' '
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|values
+index|[
+name|index
+index|[
+literal|0
+index|]
+operator|++
+index|]
+operator|.
+name|stringValue
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
