@@ -75,6 +75,19 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|KeywordAnalyzer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|Token
 import|;
 end_import
@@ -424,6 +437,11 @@ specifier|protected
 name|Analyzer
 name|analyzerB
 decl_stmt|;
+DECL|field|analyzerK
+specifier|protected
+name|Analyzer
+name|analyzerK
+decl_stmt|;
 DECL|field|reader
 specifier|protected
 name|IndexReader
@@ -485,6 +503,22 @@ block|,
 literal|"\nWhen you talk about processing speed, the"
 block|}
 decl_stmt|;
+DECL|field|strMVValues
+specifier|protected
+specifier|static
+specifier|final
+name|String
+index|[]
+name|strMVValues
+init|=
+block|{
+literal|"abc"
+block|,
+literal|"defg"
+block|,
+literal|"hijkl"
+block|}
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|setUp
@@ -509,6 +543,12 @@ name|analyzerB
 operator|=
 operator|new
 name|BigramAnalyzer
+argument_list|()
+expr_stmt|;
+name|analyzerK
+operator|=
+operator|new
+name|KeywordAnalyzer
 argument_list|()
 expr_stmt|;
 name|paW
@@ -1733,6 +1773,7 @@ name|values
 argument_list|)
 expr_stmt|;
 block|}
+comment|// make 1 doc with multi valued field
 DECL|method|make1dmfIndex
 specifier|protected
 name|void
@@ -1797,6 +1838,99 @@ argument_list|,
 name|Index
 operator|.
 name|ANALYZED
+argument_list|,
+name|TermVector
+operator|.
+name|WITH_POSITIONS_OFFSETS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|reader
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+comment|// make 1 doc with multi valued& not analyzed field
+DECL|method|make1dmfIndexNA
+specifier|protected
+name|void
+name|make1dmfIndexNA
+parameter_list|(
+name|String
+modifier|...
+name|values
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|analyzerK
+argument_list|,
+literal|true
+argument_list|,
+name|MaxFieldLength
+operator|.
+name|LIMITED
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|value
+range|:
+name|values
+control|)
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+name|F
+argument_list|,
+name|value
+argument_list|,
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Index
+operator|.
+name|NOT_ANALYZED
 argument_list|,
 name|TermVector
 operator|.
@@ -1909,6 +2043,27 @@ comment|//                                    ed 64
 name|make1dmfIndexB
 argument_list|(
 name|biMVValues
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|makeIndexStrMV
+specifier|protected
+name|void
+name|makeIndexStrMV
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|//  0123
+comment|// "abc"
+comment|//  34567
+comment|// "defg"
+comment|//     111
+comment|//  789012
+comment|// "hijkl"
+name|make1dmfIndexNA
+argument_list|(
+name|strMVValues
 argument_list|)
 expr_stmt|;
 block|}
