@@ -965,6 +965,104 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|test1StrMV
+specifier|public
+name|void
+name|test1StrMV
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|makeIndexStrMV
+argument_list|()
+expr_stmt|;
+name|FieldQuery
+name|fq
+init|=
+operator|new
+name|FieldQuery
+argument_list|(
+name|tq
+argument_list|(
+literal|"defg"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|FieldTermStack
+name|stack
+init|=
+operator|new
+name|FieldTermStack
+argument_list|(
+name|reader
+argument_list|,
+literal|0
+argument_list|,
+name|F
+argument_list|,
+name|fq
+argument_list|)
+decl_stmt|;
+name|FieldPhraseList
+name|fpl
+init|=
+operator|new
+name|FieldPhraseList
+argument_list|(
+name|stack
+argument_list|,
+name|fq
+argument_list|)
+decl_stmt|;
+name|SimpleFragListBuilder
+name|sflb
+init|=
+operator|new
+name|SimpleFragListBuilder
+argument_list|()
+decl_stmt|;
+name|FieldFragList
+name|ffl
+init|=
+name|sflb
+operator|.
+name|createFieldFragList
+argument_list|(
+name|fpl
+argument_list|,
+literal|100
+argument_list|)
+decl_stmt|;
+name|SimpleFragmentsBuilder
+name|sfb
+init|=
+operator|new
+name|SimpleFragmentsBuilder
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"abc<b>defg</b>hijkl"
+argument_list|,
+name|sfb
+operator|.
+name|createFragment
+argument_list|(
+name|reader
+argument_list|,
+literal|0
+argument_list|,
+name|F
+argument_list|,
+name|ffl
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
